mainMenuStyle.css
/* ... */
.tooltip {
    position: relative;
    display: inline-block;
}
  
.tooltip__text {
    visibility: hidden;
    width: 120px;
    background-color: var(--black);
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 50%;
    margin-left: -60px;
}
  
.tooltip.tooltip__text::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 15%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: var(--black) transparent transparent transparent;
}
  
.tooltip:hover .tooltip__text{
    visibility: visible;
}

/* - - - - - - - - MEDIA QUERIES - - - - - - - - */

@media only screen and (min-width: 768px) and (max-width: 1023px) {
    .headerOptions__title{
        display: none;
    }

    .headerOptions__hamburgerMenu{
        display: block;
        margin-top: 40px;
        margin-left: 40px;
    }

    .headerOptions__logoutContainer{
        display: none;
    }

    .headerOptions__searchLens--mobile{
        display: none;
    }

    nav{
        position: absolute;
        width: 303px;
        height: 100%;
        left: -303px;
        top: 0;
        background: #151515;
        transition: left .4s cubic-bezier(.33,.33,.6,.59);
    }

    nav.show{
        z-index: 2;
        left:0;
        box-shadow: 14px 0px 36px 5px rgba(0, 0, 0, 0.62);
    }

    .nav__title{
        display: block;
        color: var(--white);
        height: 38px;
        width: 198px;
        margin-left: 39px;
        margin-top: 34px;
        margin-bottom: 50px;
    }

    .nav__title h1{
        font-weight: normal;
        font-size: 28px;
        line-height: 38px;
        letter-spacing: 1.74222px;
    }

    .title__strong{
        font-weight: 800;
    }

    .nav__hamburgerMenu--mobile{
        display: none;
    }

    nav ul {
        padding-top: 22px;
        padding-left: 40px;
    }

    .list__logOut.show{
        margin-top: 317px;
    }

    .clickContainer--tablet{
        display: none;
    }

    .clickContainer--tablet.show{
        display: block;
        position: absolute;
        left: 303px;
        top: 0;
        width: 100%;
        height: 100%;
    }

    .horizontalContainer{
        margin-left: 40px;
    }

    .cardsContainer__list{
        grid-template-columns: repeat(auto-fill, minmax(332px, auto));
    }

    .card.listElement{
        min-width: 332px;
    }
}
/* ... */

